alignment fixes

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -86,12 +86,11 @@ header img {
 }
 
 .about-us {
-    padding: 3rem 4rem 3rem 4rem;
+    padding: 3rem;
 }
 
 .about-us :last-child {
     align-self: center;
-    margin-top: 2rem;
 }
 
 .about-us h2 {
@@ -104,14 +103,19 @@ header img {
 }
 
 .about-us-img {
-    margin-top: 1rem;
+    margin-top: 2rem;
     border-radius: 1rem;
+    max-width: 100%;
 }
 
 .our-approach {
-    padding: 3rem 4rem 3rem 4rem;
+    padding: 3rem;
     color: #000;
     background-color: var(--grey);
+}
+
+.our-approach :last-child {
+    align-self: center;
 }
 
 .our-approach h2 {
@@ -124,25 +128,30 @@ header img {
 }
 
 .our-approach-img {
-    margin-top: 1rem;
+    margin-top: 2rem;
     border-radius: 1rem;
+    max-width: 100%;
 }
 
 .services {
-    padding: 3rem 4rem 3rem 4rem;
-    gap: 3rem;
+    padding: 3rem;
+    gap: 0;
 }
 
 .services h2 {
     font-size: 2rem;
 }
 
-.services h3 {
+.service-item {
+    margin-top: 1.5rem;
+}
+
+.service-item h3 {
     font-size: 1.25rem;
 }
 
 .shaping-tomorrow {
-    padding: 3rem 4rem 3rem 4rem;
+    padding: 3rem;
     background-color: var(--light-yellow);
 }
 
@@ -155,7 +164,7 @@ header img {
 }
 
 .contact-us-home {
-    padding: 3rem 4rem 3rem 4rem;
+    padding: 3rem;
 }
 
 .contact-us-home h2 {
